--- a/AdvancedPython_Regular_Expressions_Lecture-Completed.ipynb
+++ b/AdvancedPython_Regular_Expressions_Lecture-Completed.ipynb
@@ -3009,7 +3009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3028,7 +3028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -3044,7 +3044,7 @@
        " 'programming is cool\\n']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3059,19 +3059,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 're' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m             \u001b[39melse\u001b[39;00m:\n\u001b[0;32m      9\u001b[0m                 \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mNone\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m file_reader()\n",
-      "Cell \u001b[1;32mIn[1], line 4\u001b[0m, in \u001b[0;36mfile_reader\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mregex_test.txt\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m file:\n\u001b[0;32m      3\u001b[0m     data \u001b[39m=\u001b[39m file\u001b[39m.\u001b[39mreadlines()\n\u001b[1;32m----> 4\u001b[0m     full_name_pattern \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39mcompile (\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39m[A-Z]\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m     \u001b[39mfor\u001b[39;00m name \u001b[39min\u001b[39;00m data:\n\u001b[0;32m      6\u001b[0m         \u001b[39mif\u001b[39;00m re\u001b[39m.\u001b[39mmatch(full_name_pattern, name):\n",
-      "\u001b[1;31mNameError\u001b[0m: name 're' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abraham Lincoln\n",
+      "\n",
+      "Andrew P Garfield\n",
+      "\n",
+      "Connor Milliken\n",
+      "\n",
+      "Jordan Alexander Williams\n",
+      "\n",
+      "Madonna\n",
+      "\n",
+      "None\n"
      ]
     }
    ],
@@ -3079,7 +3084,7 @@
     "def file_reader():\n",
     "    with open('regex_test.txt') as file:\n",
     "        data = file.readlines()\n",
-    "        full_name_pattern = re.compile (r'[A-Z]')\n",
+    "        full_name_pattern = re.compile (r'^[A-Z]')\n",
     "        for name in data:\n",
     "            if re.match(full_name_pattern, name):\n",
     "                print(name)\n",
@@ -3125,47 +3130,43 @@
     }
    ],
    "source": [
-    "def file_reader():\n",
-    "    with open('regex_test.txt') as file:\n",
-    "        data = file.readlines()\n",
-    "        full_name_pattern = re.compile (r'[A-Z]')\n",
-    "        for name in data:\n",
-    "            if re.match(full_name_pattern, name):\n",
-    "                print(name)\n",
-    "            else:\n",
-    "                print(\"None\")\n",
-    "file_reader()"
+    "https://github.com/Ckevinfl89/assigmentweek4day1.git"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 're' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m      9\u001b[0m             \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 11\u001b[0m \u001b[43mfile_reader\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[7], line 4\u001b[0m, in \u001b[0;36mfile_reader\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mregex_test.txt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m data\u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[1;32m----> 4\u001b[0m full_name_pattern \u001b[38;5;241m=\u001b[39m \u001b[43mre\u001b[49m\u001b[38;5;241m.\u001b[39mcompile (\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[A-Z][a-z]\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m data:\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m re\u001b[38;5;241m.\u001b[39mmatch(full_name_pattern, name):\n",
-      "\u001b[1;31mNameError\u001b[0m: name 're' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abraham Lincoln\n",
+      "\n",
+      "Andrew P Garfield\n",
+      "\n",
+      "Connor Milliken\n",
+      "\n",
+      "Jordan Alexander Williams\n",
+      "\n",
+      "None\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "def file_reader():\n",
-    "    file = open('regex_test.txt')\n",
-    "    data= file.readlines()\n",
-    "    full_name_pattern = re.compile (r'[A-Z][a-z]')\n",
-    "    for name in data:\n",
-    "        if re.match(full_name_pattern, name):\n",
-    "            print(name)\n",
-    "        else:\n",
-    "            print(\"None\")\n",
+    "import re\n",
     "\n",
+    "def file_reader():\n",
+    "    with open('regex_test.txt') as file:\n",
+    "        data = file.readlines()\n",
+    "        full_name_pattern = re.compile(r'^[A-Z]')\n",
+    "        for name in data:\n",
+    "            if re.match(full_name_pattern, name) and ' ' in name:\n",
+    "                print(name)\n",
+    "            else:\n",
+    "                print(\"None\")\n",
     "file_reader()"
    ]
   },
@@ -3305,7 +3306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
